# openai-autogen-dev-studio

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  SECURITY.md  constants.py  core.py  env.openai-sample.jsonc  env.opensource-sample.jsonc  env.sample.jsonc  main.backup.py  main.py  mypy.ini  niam.py  oai_config_list.sample.json  pyproject.toml  pytest.ini  typedefs.py
.github/ISSUE_TEMPLATE/: config.yml  developer_bug_report.md  developer_bug_report.yml
.github/workflows/: check.yml
actions/: __init__.py  base_action.py  fetch_web_page.py  read_file.py  run_bash_command.py  run_rust_file.py  search_web.py  search_web_types.py  update_tasks.py  write_file.py
agents/: __init__.py  assistant.py  base_agent.py  ceo.py  functionner.py  planner.py  product_owner.py  quality_analyst.py  software_engineer.py  user_experience_designer.py
libs/: __init__.py  functionary.py
tests/actions/: test_fetch_web_page.py  test_run_bash_command.py  test_search_web.py
tests/utils/: test_clean_agent_name.py  test_clean_text.py  test_get_command_from_message.py  test_mask_secret.py  test_normalize_agent_name.py
typedefs/: __init__.py  config.py  message.py  task.py
utils/: __init__.py  clean_agent_name.py  clean_text.py  debug.py  ensure_str.py  get_command_from_message.py  get_model_config_as_dict.py  mask_secret.py  normalize_agent_name.py  print_project_config.py  read_file.py
