[tool.poetry]
name = "openai-autogen-dev-studio"
version = "0.1.0"
description = "Generate games and programs using OpenAI agents. Built on top of Microsoft Autogen."
authors = ["Ivan Gabriele <ivan.gabriele@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# pyautogen = { git = "https://github.com/microsoft/autogen", rev = "funcall_role" }
python = "^3.10"
pyautogen = { extras = ["mathchat"], version = "^0.1.4" }
ipython = "^8.16.0"
termcolor = "^2.3.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
jsonc-parser = "^1.1.5"
dacite = "^1.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
types-beautifulsoup4 = "^4.12.0.6"
types-requests = "^2.31.0.7"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
